Enable image to be fullscreened

--- a/lib/client/autoform-file.html
+++ b/lib/client/autoform-file.html
@@ -21,7 +21,9 @@
 </template>
 
 <template name="afFileUploadThumbImg">
-	<img src="{{url}}" alt="" class="img-fileUpload-thumbnail img-thumbnail img-rounded">
+  <a class="btn btn-default" target="_blank" href="{{url}}">
+  	<img src="{{url}}" alt="" class="img-fileUpload-thumbnail img-thumbnail img-rounded">
+  </a>
 </template>
 
 <template name="afFileRemoveFileBtnTemplate">
